# travis-test-ios-simple

./: .travis.yml  AppDelegate.h  AppDelegate.mm  CMakeLists.txt  Info.plist.in  README.md  main.mm  my.cpp
